--- a/spring-mybatis/spring-mybatis.gradle
+++ b/spring-mybatis/spring-mybatis.gradle
@@ -14,5 +14,7 @@ dependencies {
         implementation group: 'ognl', name: 'ognl', version: '3.3.2'
         implementation group: 'cglib', name: 'cglib', version: '3.3.0'
         implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
+        implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.7'
+        implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.7'
     }
 }
