feat:add sqlite

--- a/spring-mybatis/src/main/resources/jdbc.properties
+++ b/spring-mybatis/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-driverClass=com.mysql.jdbc.Driver
-connectUrl=jdbc:mysql://10.167.0.252:3306/trantor_newretail_dev_meta_store_slave
-username = trantor_gaia_env_new_retail
-password = anywhere
+driverClass=org.sqlite.JDBC
+connectUrl=jdbc:sqlite:/Users/kevin/kaifa/db/test.db
+username=
+password=
