--- a/spring-mybatis/spring-mybatis.gradle
+++ b/spring-mybatis/spring-mybatis.gradle
@@ -16,5 +16,7 @@ dependencies {
         implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
         implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.7'
         implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.7'
+        // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+        implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
     }
 }
