feat:add config

--- a/spring-mybatis/src/main/resources/jdbc.properties
+++ b/spring-mybatis/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-driverClass=org.sqlite.JDBC
-connectUrl=jdbc:sqlite:/Users/kevin/kaifa/db/test.db
-username=
-password=
+driverClass=com.mysql.cj.jdbc.Driver
+connectUrl=jdbc:mysql://gz-cynosdbmysql-grp-d6m15gyb.sql.tencentcdb.com:28303/test
+username = root
+password = Loveling1314!
