--- a/spring-mybatis/spring-mybatis.gradle
+++ b/spring-mybatis/spring-mybatis.gradle
@@ -9,14 +9,15 @@ dependencies {
         api(project(":spring-jdbc"))
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
-        implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
+        implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
         implementation group: 'org.springframework.batch', name: 'spring-batch-infrastructure', version: '4.3.4'
         implementation group: 'ognl', name: 'ognl', version: '3.3.2'
         implementation group: 'cglib', name: 'cglib', version: '3.3.0'
         implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
         implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.7'
         implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.7'
-        // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
-        implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.5'
+        implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.5'
+        implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.32'
     }
 }
